******************************************
*  Social Networks Visualiser (SocNetV)  *
******************************************

ChangeLog:


Version 0.70 - June 30  2009
Codename: "Summertime"
----------------------------
- Fixed bug #381096 crashing SocNetV in Edge Filtering when an edge was reciprocal.
- Fixed bug #381094 weight changes not recorded correctly in symmetric edges.


Version 0.6.0 - May 27 2009
Codename: "Spring"
----------------------------
- GraphML becomes our native load/save format ( partially support for yFiles)
- New filter edges by their weights functionality. 
- The background can be a custom image (via menu View > Background Image)
- New rounded rectangle shape for nodes.
- Nodenumbers can be displayed inside nodes, once again. Sorry, labels are
too difficult to show inside nodes :(
- Fresh application iconset in shades of gold and gray. 
- New version name scheme. Main versions: 0.x Bugfixes: 0.x.y 
- Project admin, code, bug tracking etc moved to Launchpad/Bazaar. Report bugs
to Launchpad.
- SocNetV joins the QtDesktop project (http://code.google.com/p/qtdesktop/)


Version 0.51 - Feb 16 2009
Codename: "Maria"
------------------------------
- Fixed serious bug in DistanceMatrix method, affecting centralities and layout. 
- Fixed debug messages output default status to false, so that SocNetV is more responsive.
- Officially added  DL (Data Language) file format support. This is UCINETs FULMATRIX mode.  


Version 0.50 - Feb 13 2009
Codename: "Recession (or the ballad of the deranged Greek statesmen)"
------------------------------
-'Small World' random network creation (Watts and Strogatz model).
-Clustering Coefficient calculation. 
-Average Graph Distance (shortest path length) calculation. 
-Nodes can be linked to themselves with nice bezier curves.
-Negative and decimal edge weights are now fully supported.
-Dashed lines are nicely used to signify negative edge weights. 
-Export current network to PDF with one click.