@@ -11,4 +11,7 @@ Debian packagers:
   - Alejandro Garrido Mota (<0.44)
 
 Gentoo packager:
-  - Markos Chandras 
+  - Markos Chandras
+
+Arch packager:
+  - Tom Tryfonidis  
