@@ -8,8 +8,12 @@ ChangeLog:
 Version 0.70 - June 30  2009
 Codename: "Summertime"
 ----------------------------
+- Fixed bug #379204 which was crashing SocNetV when creating small worlds above 201 nodes
 - Fixed bug #381096 crashing SocNetV in Edge Filtering when an edge was reciprocal.
 - Fixed bug #381094 weight changes not recorded correctly in symmetric edges.
+- To speed things up, the on-the-fly Clustering Coef. and Average Distance
+calculation was removed from random network creation routines.
+- Tom Tryfonidis prepared Arch PKGBUILDs for SocNetV 
 
 
 Version 0.6.0 - May 27 2009
